# agentic-researcher

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  agent_workflow.py  agentic_researcher.py  app.py  assistant.py  classification_client.py  config.py  crag_agent.py  crag_client.py  params.example.json  params.json  pyproject.toml  question_rewriter.py  requirements.txt  requirements_dev.txt  state.py  supervisor_workflow.py  supervission_test.py  tools.py  utilities.py
agent/: agent.py
classification/: app.py
crag/: crag.py  generator.py  grader.py  graph_state.py  nodes.py  question_rewriter.py  retrieval_grader.py  tools.py  workflow.py
rewriter/: rewriter.py  rewriter_b.py  router.py
services/: checkpointer.py
services/llms/: anthropic.py  bedrock.py
services/redis_checkpointer/: redis_checkpointer.py  redis_saver.py  utilities.py
simple_tool/: app.py  model.py  state.py  tools.py  utilities.py
summarization/: assistant.py  nodes.py  state.py  summarization.py
supervisor/: supervisor.py  utilities.py  workflow.py
tests/unit/: test_config.py
