[tool.poetry]
name = "agentic-test"
version = "0.1.0"
description = ""
authors = ["Restebance <restebance@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.10"
langchain = "^0.3.3"
langchain-aws = "^0.2.2"
python-dotenv = "^1.0.1"
pytz = "^2024.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
